# static

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml
src/: main.rs
static/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/css/: player_style.css  room.css
static/js/: player.js
static/list-pages/dbl/: dummy_home.html  index.html
static/room/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
static/room/snippets/movie-room-d3dbbddc3d54857c/src/js/: player.js
static/snippets/movie-room-d3dbbddc3d54857c/src/js/: player.js
static/snippets/movie-room-d3dbbddc3d54857c/src/websocket/js/: handle_ws.js
static/snippets/movie-room-d3dbbddc3d54857c/src/webtorrent/js/: wt.js
static/templates/: room.html
templates/: explore.html  home.html  room_test.html  room_v3.html
