[package]
name = "static-server"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
futures = "*"
serde_json = "1.0.59"
chrono = "0.4.19"

serde = { version=  "1.0.117", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }